rm xmltest.h from installed headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,6 @@ ELSE(BUILD_STATIC_LIBS)
 	INSTALL(TARGETS tinyxml2
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 ENDIF(BUILD_STATIC_LIBS)
-INSTALL(FILES tinyxml2.h xmltest.h DESTINATION include)
+INSTALL(FILES tinyxml2.h DESTINATION include)
 
 #add_test(test ${SAMPLE_NAME} COMMAND $<TARGET_FILE:${SAMPLE_NAME}>)
