--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,13 @@ project(tinyxml2)
 #CMAKE_BUILD_TOOL
 
 ################################
+# set lib version here
+
+set(GENERIC_LIB_VERSION "1.0.1")
+set(GENERIC_LIB_SOVERSION "1")
+
+
+################################
 # Add common source 
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/.")
@@ -44,6 +51,9 @@ IF(BUILD_STATIC_LIBS)
 	set_target_properties(tinyxml2static PROPERTIES OUTPUT_NAME tinyxml2)
 ENDIF(BUILD_STATIC_LIBS)
 add_library(tinyxml2 SHARED tinyxml2.cpp tinyxml2.h)
+set_target_properties(tinyxml2 PROPERTIES
+	VERSION "${GENERIC_LIB_VERSION}"
+	SOVERSION "${GENERIC_LIB_SOVERSION}")
 
 add_executable(test xmltest.cpp)
 add_dependencies(test tinyxml2)
