Add pkgconfig file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,4 +72,14 @@ ELSE(BUILD_STATIC_LIBS)
 ENDIF(BUILD_STATIC_LIBS)
 INSTALL(FILES tinyxml2.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
+foreach(p LIB INCLUDE)
+  set(var CMAKE_INSTALL_${p}DIR)
+  if(NOT IS_ABSOLUTE "${${var}}")
+    set(${var} "${CMAKE_INSTALL_PREFIX}/${${var}}")
+  endif()
+endforeach()
+
+configure_file(tinyxml2.pc.in tinyxml2.pc @ONLY)
+install(FILES tinyxml2.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+
 #add_test(test ${SAMPLE_NAME} COMMAND $<TARGET_FILE:${SAMPLE_NAME}>)
