Fix reference to readme in visual studio project

--- a/tinyxml2/tinyxml2.vcxproj.filters
+++ b/tinyxml2/tinyxml2.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\readme.txt">
+    <None Include="..\readme.md">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
