--- a/tinyxml2/tinyxml2.vcxproj
+++ b/tinyxml2/tinyxml2.vcxproj
@@ -151,7 +151,7 @@
     <ClInclude Include="..\tinyxml2.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\readme.txt" />
+    <None Include="..\readme.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
