--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ endif(MSVC)
 add_library(${CMAKE_PROJECT_NAME} tinyxml2.cpp tinyxml2.h)
 set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES DEFINE_SYMBOL TINYXML2_EXPORTS)
 if(BUILD_SHARED_LIBS)
-	if(MSVS)
+	if(MSVC)
 		set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES DEBUG_POSTFIX -d)
 		set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES SUFFIX "-${VERSION_MAJOR}${CMAKE_SHARED_LIBRARY_SUFFIX}")
 	else()
