--- a/tinyxml2.pc.in
+++ b/tinyxml2.pc.in
@@ -5,6 +5,6 @@ includedir=@CMAKE_INSTALL_INCLUDEDIR@
 
 Name: TinyXML2
 Description: simple, small, C++ XML parser
-Version: @GENERIC_LIB_VERSION@
+Version: @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@
 Libs: -L${libdir} -ltinyxml2
 Cflags: -I${includedir}
