--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,10 +63,12 @@ target_link_libraries(test tinyxml2)
 
 if(BUILD_STATIC_LIBS)
 	install(TARGETS tinyxml2 tinyxml2static
+		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 else(BUILD_STATIC_LIBS)
 	install(TARGETS tinyxml2
+		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif(BUILD_STATIC_LIBS)
 install(FILES tinyxml2.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
