--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@ Win32/
 x64/
 ipch/
 resources/out/
+tinyxml2/tinyxml2-cbp/bin/
+tinyxml2/tinyxml2-cbp/obj/
 *.sdf
 *.suo
 *.opensdf
 *.user
+*.depend
+*.layout
