--- a/tinyxml2/test.vcxproj.filters
+++ b/tinyxml2/test.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\tinyxml2.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\tinyxml2.h" />
+    <ClCompile Include="..\xmltest.cpp" />
   </ItemGroup>
 </Project>
