--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ script:
 - bii find -um
 - bii cpp:build
 - cp -r blocks/david/tinyxml2/resources bin
-- ./bin/david_tinyxml2_xmltest
+- cd bin
+- ./david_tinyxml2_xmltest
 after_success:
 - bii user david -p $BII_DAVID_PASSWORD
 - bii publish
