--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,14 @@
 # To learn more about the CMake use with biicode, visit http://docs.biicode.com/c++/building.html
 # Or check the examples below
 
-
-	include(${CMAKE_HOME_DIRECTORY}/biicode.cmake)
+IF(BIICODE)
 	# Initializes block variables
 	INIT_BIICODE_BLOCK()
 
 
 	# Actually create targets: EXEcutables and libraries.
 	ADD_BIICODE_TARGETS()
-	#TARGET_INCLUDE_DIRECTORIES(${BII_LIB_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
+ELSE()
 
 	cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 	cmake_policy(VERSION 2.6)
@@ -102,4 +100,4 @@
 	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/tinyxml2.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 
 	#add_test(test ${SAMPLE_NAME} COMMAND $<TARGET_FILE:${SAMPLE_NAME}>)
-
+ENDIF()
