[ADD] Specify the CRT version for Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,13 @@ include(GNUInstallDirs)
 set(GENERIC_LIB_VERSION "3.0.0")
 set(GENERIC_LIB_SOVERSION "3")
 
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
+    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+
+    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
+    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+ENDIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 
 ################################
 # Add common source 
