[ADD] USE_STATIC_RUNTIME option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,20 @@ include(GNUInstallDirs)
 set(GENERIC_LIB_VERSION "3.0.0")
 set(GENERIC_LIB_SOVERSION "3")
 
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+option(USE_STATIC_RUNTIME "Use the static MSVC runtime." OFF)
+
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" AND USE_STATIC_RUNTIME)
     SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
     SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
     SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MDd")
+    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
+
+    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MD")
+    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
 ENDIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 
 ################################
